fix: CSS wrap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,6 @@ section {
     color: #000;
     padding: 1.5em;
     text-align: center;
-    transition: ease-in-out 0.5s all;
 }
 .list__edit:hover {
     cursor:pointer; 
@@ -102,8 +101,10 @@ section {
 
 #navbar__list {
     display: flex;
+    flex: 1 1 auto;
+    flex-wrap: wrap;
     background:whitesmoke;
-    justify-content: space-evenly;
+    justify-content: flex-start;
 }
 
 
